k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: app
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 9095
      targetPort: 8000
  type: NodePort
