k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  tls:
    - hosts:
        - django-app.consenso.com.ec
      secretName: consenso-tls 
  rules:
    - host: django-app.consenso.com.ec
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 9095
